--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <p>bicicletas elétricas de alta precisão e qualidade. feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a href=".bicicletas.html">Escolha a sua</a>
       </div>
-      <img src="img/fotos/introducao.jpg" alt="Bicicleta elétrica preta.">
+      <div>
+        <img src="img/fotos/introducao.jpg" alt="Bicicleta elétrica preta.">
+      </div>
     </div>
   </main>
 
