iniciando parte da galeria

--- a/index.html
+++ b/index.html
@@ -44,6 +44,27 @@
     </div>
   </main>
 
+  <article>
+    <h2 class="font-1-xxl">escolha sua<span class="cor-p1">.</span></h2>
+    <div class="bikes-grid">
+      <div class="bike">
+        <img src="img/bicicletas/magic-home.jpg" alt="Magic Might">
+        <h3>Magic Might</h3>
+        <p>R$2499</p>
+      </div>
+      <div class="bike">
+        <img src="img/bicicletas/nimbus-home.jpg" alt="Nimbus Stark">
+        <h3>Magic Might</h3>
+        <p>R$2499</p>
+      </div>
+      <div class="bike">
+        <img src="img/bicicletas/nebula-home.jpg" alt="Nebula Cosmic">
+        <h3>Magic Might</h3>
+        <p>R$2499</p>
+      </div>
+    </div>
+  </article>
+
 </body>
 
 </html>
