--- a/contato.html
+++ b/contato.html
@@ -68,15 +68,15 @@
             <label for="telefone">Telefone</label>
             <input type="text" id="telefone" name="telefone" placeholder="(xx) xxxx-xxxx">
           </div>
-          <div>
-            <label for="email">Nome</label>
+          <div class="col-2">
+            <label for="email">Email</label>
             <input type="email" id="email" name="email" placeholder="contato@email.com">
           </div>
-          <div>
-            <label for="mensagem">Nome</label>
+          <div class="col-2">
+            <label for="mensagem">Mensagem</label>
             <textarea rows="5" id="mensagem" name="mensagem" placeholder="O que você precisa?"></textarea>
           </div>
-          <button class="botao">Enviar Mensagem</button>
+          <button class="botao col-2">Enviar Mensagem</button>
         </form>
       </section>
     </div>
