--- a/seguros.html
+++ b/seguros.html
@@ -108,6 +108,40 @@
     </div>
   </article>
 
+  <article class="perguntas container">
+    <h2 class="font-1-xxl">perguntas frequentes<span class="cor-p1">.</span></h2>
+
+    <dl>
+      <div>
+        <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+        <dl class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dl>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Como posso entrar em contato?</dt>
+        <dl class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dl>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
+        <dl class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dl>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Qual a garantia que possuo?</dt>
+        <dl class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dl>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
+        <dl class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dl>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Quantas trocas posso fazer ao ano?</dt>
+        <dl class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dl>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Qual Bikcraft devo escolher para o meu tamanho?</dt>
+        <dl class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dl>
+      </div>
+  </article>
+
   <footer class="footer-bg">
     <div class="footer container">
       <img src="./img/bikcraft.svg" alt="Bikcraft">
