--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     </div>
   </main>
 
-  <article class="bicicleta-lista">
-    <h2 class="container font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
+  <article class="bicicleta-lista container">
+    <h2 class="font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
 
     <ul>
       <li>
