--- a/bicicletas.html
+++ b/bicicletas.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bicicletas | Bikcraft</title>
   <meta name="description" content="Nossas Bicicletas.">
+  <link rel="preload" href="css/style.css" as="style">
+
   <link rel="stylesheet" href="css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -99,7 +101,7 @@
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
           <img src="./img/bicicletas/nebula.jpg" alt="bicicleta preta">
-          <span class="font-2-m cor-0">R$4999</span>
+          <span class="font-2-m cor-0">R$3999</span>
         </div>
         <div class="bicicletas-conteudo">
           <h2 class="font-1-xl">Nebula Cosmic</h2>
