--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bikcraft - Bicicletas Elétricas</title>
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
+
+  <link rel="preload" href="css/style.css" as="style">
+
   <link rel="stylesheet" href="css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +20,7 @@
   <header class="header-bg">
     <div class="header container">
       <a href="./">
-        <img src="img/bikcraft.svg" alt="Bikcraft">
+        <img src="img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       </a>
 
       <nav aria-label="primaria">
@@ -38,9 +41,10 @@
         <p class="font-2-l cor-5">bicicletas elétricas de alta precisão e qualidade. feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a class="botao" href=".bicicletas.html">Escolha a sua</a>
       </div>
-      <div>
-        <img src="img/fotos/introducao.jpg" alt="Bicicleta elétrica preta.">
-      </div>
+      <picture>
+        <source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus.jpg">
+        <img src="./img/fotos/introducao.jpg" width="1280" height="1600" alt="Bicicleta elétrica preta.">
+      </picture>
     </div>
   </main>
 
